--- a/html/templates/shipment_add.html
+++ b/html/templates/shipment_add.html
@@ -150,7 +150,7 @@
                 {% endfor %}
             </div>
             <div class="col-md-12"><br>
-                <a class="add-wh btn btn-success {{ warehouse_formset.prefix }}-add-row add-row" title="{{ warehouse_formset.addText }}" href="javascript:void(0);"><i class="fa fa-fw fa-plus"></i>Adicionar warehouse</a>
+                <a class="add-wh btn btn-success {{ warehouse_formset.prefix }}-add-row add-row" title="{{ warehouse_formset.addText }}" href="javascript:void(0);"><i class="fa fa-fw fa-plus"></i>{% trans "Adicionar warehouse" %}</a>
             </div>
             <br>
           </div>
