--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -42,7 +42,14 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="/static/img/logo_sup.png" /><img width="175px" src="/static/img/logo_bottom.png" /></a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    {% if LANGUAGE_CODE == 'pt-br' %}
+                    <img src="/static/img/logo_sup.png" />
+                    <img width="175px" src="/static/img/logo_bottom.png" />
+                    {% else %}
+                    <img src="/static/img/logo-en.png" style="width: 275px;" />
+                    {% endif %}
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -56,13 +63,13 @@
     </nav>
     <div class="container">
         <div class="row">
+            <div class="box-resposta">
             {% if finish %}
-                <div class="box-resposta">
-                    <p>{% trans "Senha alterada com sucesso." %}</p>
-                    <p><a class="download" href="/login">{% trans "Clique aqui" %}</a> {% trans "para realizar o seu login no sistema." %}</p>
-                    {% else %}
-                        {% if success or valid %}
-                </div>
+                <p>{% trans "Senha alterada com sucesso." %}</p>
+                <p><a class="download" href="/login">{% trans "Clique aqui" %}</a> {% trans "para realizar o seu login no sistema." %}</p>
+            {% else %}
+                {% if success or valid %}
+
 
             {% url 'user_reset_password' uidb64=uidb64 token=token as my_url %}
             <form action="{{ my_url }}" method="post" class="form-cad-cliente" id="form-reset-password">
@@ -95,6 +102,7 @@
             <p>{% trans "Token inválido." %}</p>
                 {% endif %}
             {% endif %}
+            </div>
         </div>
     </div>
 
