--- a/html/templates/email/registration-email.html
+++ b/html/templates/email/registration-email.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8">
     <title>$arg1</title>
@@ -7,7 +7,14 @@
 <body>
 
 <div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
-    <a href="#"><img width="75" src="https://54.233.149.84/static/img/logo_sup.png"><img width="200" src="https://54.233.149.84/static/img/logo_bottom.png"></a>
+    <a href="{{ protocol}}://{{ domain }}/">
+        {% if LANGUAGE_CODE == 'pt-br' %}
+        <img width="75" src="{{ protocol}}://{{ domain }}/static/img/logo_sup.png">
+        <img width="200" src="{{ protocol}}://{{ domain }}/static/img/logo_bottom.png">
+        {% else %}
+        <img src="{{ protocol}}://{{ domain }}/static/img/logo-en.png">
+        {% endif %}
+    </a>
     <div style="background: #eee; padding: 10px 20px 20px 20px;">
         <p style="color:#858585;font:15px/120% 'Helvetica'">$arg2</p>
         <p style="color:#858585;font:15px/120% 'Helvetica'">$arg3</p>
