--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -67,7 +67,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand page-scroll"><img src="/static/img/logo_sup.png" /><img src="/static/img/logo_bottom.png" width="175" /></a>
+                <a href="/" class="navbar-brand page-scroll">
+                    {% if LANGUAGE_CODE == 'pt-br' %}
+                    <img src="/static/img/logo_sup.png" />
+                    <img src="/static/img/logo_bottom.png" width="175" />
+                    {% else %}
+                    <img src="/static/img/logo-en.png" style="width: 275px;" />
+                    {% endif %}
+                </a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -243,9 +250,9 @@
             </div>
         </div>
     </div>
-
+    {% if user.terms_conditions is False %}
    <!-- Modal termos -->
-       <div id="termos" class="modal fade">
+    <div id="terms_conditions" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -253,17 +260,18 @@
                     <h4 class="modal-title">{% trans "Importante!" %}</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Olá, NOMEDOUSUARIO.</p>
-                    <p>Os termos e condições de uso da nossa plataforma foram atualizados. <a href='/termos-e-condicoes-de-uso.html' class='download'>Confira clicando aqui</a>. Duas informações importantes para você.</p>
-                    <p><strong>Primeiro:</strong><br />Para uma maior agilidade e transparência no atendimento aos nossos usuários, a partir de agora os valores dos envios são calculados de acordo com o tempo de permanência conosco.</p><p><strong> Seguem os valores:</strong></p>
-                    <p>Produto em estoque conosco até 45 dias: USD 1,29 por produto</p>
-                    <p>Produto em estoque conosco de 46 até 75 dias: USD 1,39 por produto</p>
-                    <p>Produto em estoque conosco de 76 até 90 dias: USD 1,99 por produto</p>
-                    <p>A partir do dia 91, o produto será considerado abandonado e retirado do estoque do usuário.</p>
+                    <p>{% trans "Olá" %}, {{ user.first_name }}</p>
+                    <p>{% trans "Os termos e condições de uso da nossa plataforma foram atualizados. <a href='/termos-e-condicoes-de-uso.html' class='download' target='_blank'>Confira clicando aqui</a>. Duas informações importantes para você." %}</p>
+                    <p><strong>{% trans "Primeiro" %}:</strong><br />{% trans "Para uma maior agilidade e transparência no atendimento aos nossos usuários, a partir do dia 15/07/2017 os valores dos envios são calculados de acordo com o tempo de permanência conosco." %}</p><p><strong> {% trans "Seguem os valores" %}:</strong></p>
+                    <p>{% trans "Produto no estoque VOI até 45 dias: USD 1,29 por produto" %}</p>
+                    <p>{% trans "Produto no estoque VOI de 46 até 75 dias: USD 1,39 por produto" %}</p>
+                    <p>{% trans "Produto no estoque VOI de 76 até 90 dias: USD 1,99 por produto" %}</p>
+                    <p>{% trans "A partir do dia 91, o produto será considerado abandonado e retirado da lista do usuário." %}</p>
                     <p></p>
-                    <p><strong>Segundo:</strong> <br />
-                    Para sua segurança e conforto, se você ainda não aceitou nossos termos, pode fezê-lo agora clicando no botão abaixo:</p>
-                    <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-check-circle"></i> {% trans "Aceito os termos e condições de uso" %}</a>
+                    <p><strong>{% trans "Segundo" %}:</strong> <br />
+                    {% trans "Para sua segurança e conforto, se você ainda não aceitou nossos termos, pode fazê-lo agora clicando no botão abaixo" %}:</p>
+                    <a href="#" id="terms-conditions-acceptance" class="btn btn-primary"><i class="fa fa-fw fa-check-circle"></i> {% trans "Aceito os termos e condições de uso" %}</a>
+                    <span>{% trans "É necessário aceitar os termos para poder continuar a utilizar a plataforma." %}</span>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
@@ -271,6 +279,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
 
     <!-- Loading basta dar display block-->
     <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
