--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -57,7 +57,6 @@
 </head>
 
 <body id="page-top" class="lista-usuarios sistema">
-
  <header class="bs-docs-nav navbar navbar-static-top header-sistema" id="top">
         <div class="container">
             <div class="navbar-header">
@@ -270,7 +269,7 @@
                     <p></p>
                     <p><strong>{% trans "Segundo" %}:</strong> <br />
                     {% trans "Para sua segurança e conforto, se você ainda não aceitou nossos termos, pode fazê-lo agora clicando no botão abaixo" %}:</p>
-                    <a href="#" id="terms-conditions-acceptance" class="btn btn-primary"><i class="fa fa-fw fa-check-circle"></i> {% trans "Aceito os termos e condições de uso" %}</a>
+                    <a href="#" id="terms-conditions-acceptance" class="btn btn-primary"><i class="fa fa-fw fa-check-circle"></i> {% trans "Li e aceito os termos e condições de uso" %}</a>
                     <span>{% trans "É necessário aceitar os termos para poder continuar a utilizar a plataforma." %}</span>
                 </div>
                 <div class="modal-footer">
