--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -42,7 +42,7 @@
                 {% if next %}
                 <input type="hidden" name="next" value="{{ next }}">
                 {% endif %}
-                <input type="text" name="login" id="login" placeholder="Login..." />
+                <input type="text" name="login" id="login" placeholder="Login..." value="{{ form.login.value }}" />
                 {% for error in form.login.errors %}
                   <br />
                   <label id="login-error" class="error" for="login">{{ error|escape }}</label>
