--- a/html/templates/error/400_shipment.html
+++ b/html/templates/error/400_shipment.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Error</title>
-</head>
-<body>
-<h1>Envio não encontrado!</h1>
-<div>Possíveis razões:</div>
-<ul>
-    <li>O envio continha produtos que foram considerados como abandonado, por ficarem por mais de 90 dias parados no estoque VOI;</li>
-    <li>O envio realmente já não existia, acesse novamente sua lista de envios para visualizar o envio que deseja acessar.</li>
-</ul>
-</body>
-</html>
+{% extends '../includes/layout-footer.html' %}
+
+{% block conteudo %}
+
+     <div class="container">
+        <div class="box-resposta box-fail">
+            <i class="center saad fa fa-frown-o fa-5x"></i><br />
+            <h4 class="center">{% trans "Envio não encontrado!" %}</h4>
+            <br />
+            <a href="#" class="center btn btn-default"> <i class="fa fa-arrow-left"></i> {% trans "Voltar" %}</a>
+        </div>
+     </div>
+
+{% endblock %}
