--- a/html/templates/shipment_details.html
+++ b/html/templates/shipment_details.html
@@ -17,7 +17,7 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Envio" %} {{ shipment.id }}{% if shipment.is_archived %} ({% trans "Arquivado" %}){% endif %}</h1>
+          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Envio" %} {{ shipment.id }}{% if shipment.is_canceled %} ({% trans "Cancelado" %}){% elif shipment.is_archived %} ({% trans "Arquivado" %}){% endif %}</h1>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
@@ -30,7 +30,7 @@
                   {% if user|has_user_perm:'view_users' %}
                   <th>{% trans "Usuário" %}</th>
                   {% endif %}
-                  {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' %}
+                  {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
                   <th>{% trans "Retirar" %}</th>
                   {% endif %}
                 </tr>
@@ -54,7 +54,7 @@
                   {% if user|has_user_perm:'view_users' %}
                   <td>{{ shipment.user.first_name }}</td>
                   {% endif %}
-                  {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' %}
+                  {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
                   {% trans "Excluir" as delete %}
                   <td>
                       <form method="delete">
@@ -307,61 +307,63 @@
                         {% endif %}
                      </div>
                    {% endfor %}
+                   {% if shipment.is_archived is False and shipment.is_canceled is False %}
                      <div class="col-md-12">
                          <a class="add-track btn btn-success add-pacote-shipment {{ packages.prefix }}-add-row add-row" title="{{ packages.addText }}" href="javascript:void(0);"><i class="fa fa-fw fa-plus"></i> {% trans "Adicionar Pacote ao Envio" %}</a>
                      </div>
+                   {% endif %}
                     </div>
               </div>
               </form>
            </div><hr />
            {% endif %}
-           {% if shipment.status == 3 and shipment.is_archived is False %}
+           {% if shipment.status == 3 and shipment.is_archived is False and shipment.is_canceled is False %}
             {% if user == shipment.user or user|has_group:'admins' %}
              {% render_payment_button paypal_form shipment.id %}
              <br><br>
             {% endif %}
            {% endif %}
              <div class="row">
-                 {% if shipment.is_canceled is False %}
-                 {% if shipment.is_archived %}
+             {% if shipment.is_canceled is False %}
+              {% if shipment.is_archived %}
                  <!-- Botao arquivar -->
                  <a class="btn btn-primary filtar-btn alterar-status" id="restore-btn" href="#">
                     <i class="fa fa-fw fa-edit"></i> {% trans "Reativar Envio" %}
                  </a>
-                 {% else %}
-                {% if shipment.status == 4 and user|has_group:'admins' %}
+              {% else %}
+               {% if shipment.status == 4 and user|has_group:'admins' %}
                 <a class="btn btn-primary filtar-btn alterar-status" id="send-btn-final" href="#">
                     <i class="fa fa-fw fa-paper-plane"></i> {% trans "Enviar e Finalizar Envio" %}
                 </a>
                 <br><br>
-                {% endif %}
-                {% if shipment.status == 1 and user|has_shipment_perm:'add_package' %}
+               {% endif %}
+               {% if shipment.status == 1 and user|has_shipment_perm:'add_package' %}
                 <a class="btn btn-primary filtar-btn alterar-status" id="send-btn-1" href="#">
                     <i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}
                 </a>
                 <br><br>
-                {% endif %}
-                {% if shipment.status == 2 %}
-                 {% if user == shipment.user or user|has_group:'admins' or user|has_shipment_perm:'add_package' %}
+               {% endif %}
+               {% if shipment.status == 2 %}
+                {% if user == shipment.user or user|has_group:'admins' or user|has_shipment_perm:'add_package' %}
                 <a class="btn btn-primary filtar-btn alterar-status" id="send-btn-3" href="#">
                     <i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}
                 </a>
                 <br><br>
-                 {% endif %}
                 {% endif %}
-                {% if shipment.status == 5 or shipment.status == 3 %}
-                 {% if user|has_shipment_perm:'add_package' %}
+               {% endif %}
+               {% if shipment.status == 5 or shipment.status == 3 %}
+                {% if user|has_shipment_perm:'add_package' %}
                 <a class="btn btn-primary filtar-btn alterar-status" id="send-btn-5" href="#">
                     <i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}
                 </a>
                 <br><br>
-                 {% endif %}
                 {% endif %}
+               {% endif %}
                  <!-- Botao arquivar -->
                  <a class="btn btn-danger filtar-btn alterar-status" id="archive-btn" href="#">
                     <i class="fa fa-fw fa-archive"></i> {% trans "Arquivar Envio" %}
                  </a>
-                 {% endif %}
+              {% endif %}
                  <br><br>
                  <form action="{% if shipment.is_archived %}{% url 'shipment_archive' shipment.id '1' %}{% else %}{% url 'shipment_archive' shipment.id '2' %}{% endif %}" method="post" id="form-archive-shipment">
                     {% csrf_token %}
@@ -373,12 +375,12 @@
                     <i class="fa fa-fw fa-remove"></i> {% trans "Cancelar Envio" %}
                  </a>
                  <br><br>
-                {% endif %}
+             {% endif %}
                 <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a>
                 <br><br><br><br>
              </div>
           </div>
-          {% endif %}
+        {% endif %}
         </div>
         <div class="col-md-1 sidebar">
         </div>
@@ -411,7 +413,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">{% trans "Excluir" %}</h4>
+                        <h4 class="modal-title">{% trans "Cancelar" %}</h4>
                     </div>
                     <div class="modal-body">
                         <p>{% trans "Confirma o cancelamento deste envio?" %}</p>
