--- a/utils/templates/admin/utils/accounting/change_list.html
+++ b/utils/templates/admin/utils/accounting/change_list.html
@@ -1,9 +1,22 @@
 {% extends "admin/change_list.html" %}
 {% load i18n admin_static %}
 
+{% block extrastyle %}
+  {{ block.super }}
+<script src="/static/externo/jquery/jquery.min.js"></script>
+{% endblock %}
+
 {% block object-tools-items %}
 {{ block.super }}
 <li>
     <a href="{% url 'close_accounting' %}" class="btn btn-high btn-success">{% trans "Realizar fechamento" %}</a>
 </li>
+<li>
+    <a href="{%url 'admin:utils_accounting_change' 'simulate' %}" class="btn btn-high btn-success">{% trans "Simular fechamento" %}</a>
+</li>
+{% endblock %}
+
+{% block content %}
+{{ block.super }}
+
 {% endblock %}
