--- a/html/templates/shipment_details.html
+++ b/html/templates/shipment_details.html
@@ -359,6 +359,20 @@
                 <br><br>
                 {% endif %}
                {% endif %}
+               {% if user|has_group:'admins' %}
+                {% if shipment.status < 5 %}
+                <a class="btn btn-primary filtar-btn alterar-status" id="change-btn-status-forward" href="{% url 'shipment_status' shipment.id 'forward' %}">
+                    <i class="fa fa-fw fa-forward"></i> {% trans "Avançar status" %}
+                </a>
+                <br><br>
+                {% endif %}
+                {% if shipment.status > 1 %}
+                <a class="btn btn-primary filtar-btn alterar-status" id="change-btn-status-backward" href="{% url 'shipment_status' shipment.id 'backward' %}">
+                    <i class="fa fa-fw fa-backward"></i> {% trans "Voltar status" %}
+                </a>
+                <br><br>
+                {% endif %}
+               {% endif %}
                  <!-- Botao arquivar -->
                  <a class="btn btn-danger filtar-btn alterar-status" id="archive-btn" href="#">
                     <i class="fa fa-fw fa-archive"></i> {% trans "Arquivar Envio" %}
