--- a/html/templates/shipment_list.html
+++ b/html/templates/shipment_list.html
@@ -34,14 +34,14 @@
                     {% trans "Status" as status %}
                     <label for="filtro-status">{{ status }}</label>
                     {% select_status filter_values '1' as preparing_filter_status %}
-                    {% select_status filter_values '2' as payed_filter_status %}
-                    {% select_status filter_values '3' as upload_filter_status %}
+                    {% select_status filter_values '2' as upload_filter_status %}
+                    {% select_status filter_values '3' as payed_filter_status %}
                     {% select_status filter_values '4' as checkings_filter_status %}
                     {% select_status filter_values '5' as sent_filter_status %}
                     <select class="form-control" id="filtro-status" name="status">
                       <option value="">{{ status }}</option>
                       <option value="1" {{ preparing_filter_status }}>{% trans "Preparando para Envio" %}</option>
-                      <option value="2" {{ upload_filter_status }}>{% trans "Upload PDF 2 Autorizado" %}</option>
+                      <option value="2" {{ upload_filter_status }}>{% trans "Upload Etiqueta Caixa Autorizado" %}</option>
                       <option value="3" {{ payed_filter_status }}>{% trans "Pagamento Autorizado" %}</option>
                       <option value="4" {{ checkings_filter_status }}>{% trans "Checagens Finais" %}</option>
                       <option value="5" {{ sent_filter_status }}>{% trans "Enviado" %}</option>
